<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Essense Database</string>
    <string name="okButton">Valider</string>
    <string name="logo">Logo</string>
    <string name="buttonRafraichir">Rafraichir</string>
    <string name="version">Version 1.6</string>
    <string name="test_network">Vérification du réseau ...</string>
    <string name="welcome">Bienvenue</string>
    <string name="data">logo</string>
    <string name="kilometrage">Kilométrage</string>
    <string name="money">Euros</string>
    <string name="moneymoyenplein">€/Litre</string>
    <string name="retour">Retour</string>
</resources>
