<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
             android:background="@drawable/wood"
             android:id="@+id/launch"
              android:weightSum="1"
             android:foregroundGravity="top">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:src="@drawable/data31"
            android:contentDescription="@string/data"
            android:scaleType="fitXY"

            android:layout_marginTop="76dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome"
            android:id="@+id/textView8"
            android:autoText="false"
            android:textSize="50sp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"/>

    <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textClock"
            android:layout_alignTop="@+id/textView10"
            android:layout_alignParentEnd="true"/>

    <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:indeterminate="false"
            android:progress="0"
            />

    <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/test_network"
            android:id="@+id/textOk"
            android:layout_below="@+id/progressBar"
            android:layout_alignStart="@+id/imageView"
            android:layout_marginTop="36dp"
            android:textAlignment="center"
            android:layout_alignEnd="@+id/imageView"
            android:gravity="center"/>

    <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/version"
            android:id="@+id/textView10"
            android:textSize="17sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

    <Button
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/buttonRafraichir"
            android:id="@+id/but"
            android:layout_alignBottom="@+id/textClock"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:textColor="#ffffffff"
            android:visibility="invisible"/>
</RelativeLayout>